--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,5 +181,6 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure_infrastructure
+      - configure_infrastructure:
+          requires: [deploy-infrastructure]
                         
