--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,7 @@ jobs:
     steps:
       - checkout
       - run: yum install -y tar gzip
+      - run: mkdir -m 777 /tmp/project
       - run:
           name: Ensure back-end infrastructure exists
           command: |
@@ -141,7 +142,7 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
-          root: ~/
+          root: /tmp
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy_environment    
@@ -153,7 +154,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["0d:0c:f0:0a:23:a9:81:e7:51:bc:cf:ab:77:33:fc:06"]
       - attach_workspace:
-          at: ~/project/.circleci/ansible/inventory.txt
+          at: /tmp/project/.circleci/ansible/inventory.txt
       - run:
           name: Install dependencies
           command: |
@@ -162,8 +163,21 @@ jobs:
           name: Configure server
           command: |
             cd .circleci/ansible
-            ansible-playbook -i inventory.txt configure-server.yml   
-
+            ansible-playbook -i inventory.txt configure-server.yml
+      - destroy_environment  
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            # Run and save the migration output
+            npm run migrations > migrations_dump.txt
+     # Here's where you will add some code to rollback on failure 
   
 
 workflows:
