Fix workspace path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
-          root: /tmp
+          root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy_environment    
@@ -154,7 +154,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["0d:0c:f0:0a:23:a9:81:e7:51:bc:cf:ab:77:33:fc:06"]
       - attach_workspace:
-          at: /tmp/project/.circleci/ansible/inventory.txt
+          at: ~/
       - run:
           name: Install dependencies
           command: |
