--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,6 +158,8 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible tar gzip
+            pip3 install --upgrade pip
+            pip3 install --no-cache-dir awscli
       - run:
           name: Configure server
           command: |
