Fixing commands for deploy-frontend & deploy-backend

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -21,6 +21,7 @@
 - name: "Extract artifact"
   shell: |
     tar xvzf artifact.tar.gz
+    cd backend/
 - name: "Run app"
   become: true
   shell: |
