--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,7 +195,7 @@ jobs:
           command: |
             yum install -y tar gzip ansible
             curl -sL https://rpm.nodesource.com/setup_10.x | bash -
-            yum install nodejs
+            yum install -y nodejs
       - run:
           name: Get backend url
           command: |
@@ -226,7 +226,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar gzip
+            apk add --update ansible tar gzip nodejs npm
             pip3 install --upgrade pip
             pip3 install --no-cache-dir awscli
       - run:
