Add debug task in deploy role

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,8 @@ jobs:
           fingerprints: ["0d:0c:f0:0a:23:a9:81:e7:51:bc:cf:ab:77:33:fc:06"]
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Install dependencies
           command: |
