--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,11 +1,19 @@
 ---
-- name: "Extract artifact"
+- name: "Print current directory"
   shell: |
-    tar xvzf artifact.tar.gz
-    cd backend/
+    pwd
+    ls
+- name: "Extract artifact"
+  unarchive: 
+    src: artifact.tar.gz
+    dest: /home/ubuntu/
+    remote_src:  no
 - name: "Run app"
   become: true
   shell: |
+    cd /home/ubuntu
+    pwd
+    ls
     npm install
     pm2 stop default
     pm2 start npm -- start
