--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,25 @@ commands:
           command: |
             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
             aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
+  revert-migrations:
+    description: Revert the last migration
+    parameters:
+        workflow_id:
+            type: string      
+    steps:
+        - run:
+            name: Revert migrations
+            when: on_fail
+            command: |
+                SUCCESS=$(curl --insecure  https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/migration_<< parameters.workflow_id >>)
+                # Logic for reverting the database state
+                if (( $SUCCESS == 1 ));
+                then
+                    cd ~/project/backend
+                    npm install
+                    npm run migration:revert
+                fi 
 
 jobs:
   build-frontend:
@@ -180,7 +199,8 @@ jobs:
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration status to kvdb.io OR memstash.io
-          command: |   
+          command: |  
+              cat ~/project/backend/migrations_dump.txt 
               if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
               then
                   curl https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
@@ -214,6 +234,7 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy_environment 
+      - revert-migrations
   deploy-backend:
     docker:
       - image: python:3.7-alpine3.11
@@ -245,6 +266,7 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy_environment
+      - revert-migrations
   smoke-test:
     docker:
       - image: alpine:latest
@@ -283,6 +305,7 @@ jobs:
               return 1
             fi
       - destroy_environment
+      - revert-migrations
 
 workflows:
   default:
