--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,7 +201,7 @@ jobs:
           name: Send migration status to kvdb.io OR memstash.io
           command: |  
               cat ~/project/backend/migrations_dump.txt 
-              if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+              if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt
               then
                   curl https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
