--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,12 +198,12 @@ jobs:
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
-          name: Send migration status to kvdb.io OR memstash.io
+          name: Send migration status to kvdb.io
           command: |  
               cat ~/project/backend/migrations_dump.txt 
               if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt
               then
-                  curl https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                  curl -k https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
       - destroy_environment 
   deploy-frontend:
@@ -307,6 +307,26 @@ jobs:
             else
               return 1
             fi
+      - destroy_environment
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  cloudfront-update:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y tar gzip
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+            --template-file .circleci/files/cloudfront.yml \
+            --stack-name InitialStack \
+            --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --tags project=udapeople
       - destroy_environment
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
