--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,6 +281,10 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update curl
+            apk add --no-cache python3 py3-pip \
+              && pip3 install --upgrade pip \
+              && pip3 install --no-cache-dir awscli \
+              && rm -rf /var/cache/apk/*
       - run:
           name: Get backend url
           command: |
@@ -288,7 +292,7 @@ jobs:
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[0].Instances[0].PublicIpAddress')
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
+            echo "API_URL = ${API_URL}"
       - run:
           name: Backend smoke test.
           command: |
@@ -360,4 +364,6 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
                         
