--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,10 +8,9 @@
 - name: "Run app"
   debugger: on_failed
   become: true
+  args:
+    chdir: /home/ubuntu
   shell: |
-    cd /home/ubuntu
-    pwd
-    ls
     npm install
     pm2 stop default
     pm2 start npm -- start
