Adjust path for run app task

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -9,7 +9,7 @@
   debugger: on_failed
   become: true
   args:
-    chdir: /home/ubuntu
+    chdir: /home/ubuntu/dist
   shell: |
     npm install
     pm2 stop default
