--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -5,11 +5,15 @@
     src: /root/project/artifact.tar.gz
     dest: /home/ubuntu/
     remote_src:  no
+- name: Copy .env
+  copy:
+    src: .env
+    dest: /home/ubuntu/
 - name: "Run app"
-  debugger: on_failed
+  debugger: always
   become: true
   args:
-    chdir: /home/ubuntu/dist
+    chdir: /home/ubuntu/
   shell: |
     npm install
     pm2 stop default
