--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
 - name: "Extract artifact"
-  debugger: on_failed
   unarchive: 
     src: /root/project/artifact.tar.gz
     dest: /home/ubuntu/
@@ -10,10 +9,9 @@
     src: .env
     dest: /home/ubuntu/
 - name: "Run app"
-  debugger: always
   become: true
   args:
-    chdir: /home/ubuntu/
+    chdir: /home/ubuntu/dist
   shell: |
     npm install
     pm2 stop default
