--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -13,9 +13,7 @@
   args:
     chdir: /home/ubuntu/dist
   shell: |
-    npm install
-    pm2 stop default
-    pm2 start npm -- start
+    nodejs main.js
   environment:
       ENVIRONMENT: production
       TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
