Adjust run command

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -13,7 +13,7 @@
   args:
     chdir: /home/ubuntu/dist
   shell: |
-    nodejs main.js
+    pm2 start main.js
   environment:
       ENVIRONMENT: production
       TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
