--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -322,6 +322,9 @@ jobs:
             else
               return 1
             fi
+      - destroy_environment 
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   cloudfront-update:
     docker:
       - image: amazon/aws-cli
