--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -352,7 +352,7 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            #export OldWorkflowID=$(aws cloudformation \
+            export OldWorkflowID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
