--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -364,6 +364,12 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            echo ${STACKS};
+            echo "${STACKS[@]}";
+            for i in $STACKS; 
+            do 
+              echo $i;
+            done
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               aws s3 rm "s3://udapeople-${OldWorkflowID:0:7}" --recursive
