--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,6 +386,10 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+              branches:
+                only:
+                  - master
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
@@ -398,4 +402,6 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
                         
