--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,6 +336,11 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
+            export OLD_WORKFLOW_ID=$(aws cloudformation \
+                      list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                      --no-paginate --output text)
+            echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
+            curl -d "${OLD_WORKFLOW_ID}" https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/old_workflow_id
             aws cloudformation deploy \
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
@@ -352,9 +357,7 @@ jobs:
       - run:
           name: Get old stack workflow id and Remove old stacks and files
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/old_workflow_id)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # Fetch the stack names          
