--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,6 +361,11 @@ jobs:
             export OldWorkflowID=$(curl --insecure https://kvdb.io/MJ9xRzcR82e6NKBRHirxyM/old_workflow_id)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            if [[ -z "${OldWorkflowID}" ]]
+            then
+              echo "No old stack"
+              return 0
+            fi
             # Fetch the stack names          
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                     --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
